--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "bundle/vim-ragtag"]
 	path = bundle/vim-ragtag
-	url = https://github.com/tpope/vim-ragtag
+	url = https://github.com/tpope/vim-ragtag.git
 [submodule "bundle/vim-fugitive"]
 	path = bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
@@ -15,10 +15,7 @@
 	url = https://github.com/tomtom/tcomment_vim.git
 [submodule "bundle/nerdtree"]
 	path = bundle/nerdtree
-	url = https://github.com/scrooloose/nerdtree
-[submodule "snipmate"]
-	path = snipmate
-	url = https://github.com/msanders/snipmate.vim.git
+	url = https://github.com/scrooloose/nerdtree.git
 [submodule "bundle/snipmate"]
 	path = bundle/snipmate
 	url = https://github.com/msanders/snipmate.vim.git
