--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "vim-endwise"]
 	path = vim-endwise
 	url = https://github.com/tpope/vim-endwise.git
+[submodule "vim-rooter"]
+	path = vim-rooter
+	url = https://github.com/airblade/vim-rooter.git
